--- a/Quizzes.css
+++ b/Quizzes.css
@@ -1,6 +1,12 @@
 
 body {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
+  background: linear-gradient(
+    to bottom,
+    gold,
+    rgb(161, 185, 24),
+    green);
+  height: 100%;
 
 }
 
@@ -25,6 +31,13 @@ body {
     background-color: rgb(172, 114, 6);
     color: #0064bd;
 
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 p {
