--- a/Quizzes.css
+++ b/Quizzes.css
@@ -1,11 +1,8 @@
 
 body {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  background: linear-gradient(
-    to bottom,
-    gold,
-    rgb(161, 185, 24),
-    green);
+  background: 
+   ;
   height: 100%;
 
 }
